--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "react-native": "0.60.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^2.0.0-alpha.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.4",
+    "react-navigation-stack": "^1.7.3",
     "sendbird": "^3.0.108"
   },
   "devDependencies": {
