--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.4",
     "react-navigation-stack": "^1.7.3",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sendbird": "^3.0.108"
   },
   "devDependencies": {
